# cheatrs

./: Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
cheatsheets/: chromium.json  helix.json  neovim.json  template.json  tmux.json
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
